--- a/projekt.qmd
+++ b/projekt.qmd
@@ -90,7 +90,7 @@ min_salary_pln = 14666.00
 avg_salary_pln = 30045.11
 
 current_date = datetime.now() + relativedelta(years=1000)
-start_of_business = current_date - relativedelta(years=5)
+start_of_business = datetime(current_date.year - 5, 1, 1)
 
 print(start_of_business)
 
