--- a/projekt.qmd
+++ b/projekt.qmd
@@ -470,7 +470,9 @@ for _ in range(50):
 
     if status == 'completed':
         # Używamy start_of_business jako punktu odniesienia
-        base_date = start_of_business + timedelta(days=random.randint(0, 5*365 - duration))
+        total_days = (current_date - start_of_business).days - duration
+        total_days = max(total_days, 0)
+        base_date = start_of_business + timedelta(days=random.randint(0, total_days))
         departure = datetime(
             base_date.year, base_date.month, base_date.day,
             random.randint(0,23), random.randint(0,59), random.randint(0,59)
